[package]
name = "fakeroute"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.9", default-features = false, features = ["http1", "json", "tokio"] }
tokio = { version = "1.51.1", features = ["rt", "macros", "signal", "fs", "net", "sync"] }
pico-args = "0.5.0"
serde_json = "1.0.149"
owo-colors = "4.3.0"
chrono = { version = "0.4.44", default-features = false, features = ["clock"] }
notify = "8.2.0"

[profile.release]
strip = true
lto = true
codegen-units = 1
