[package]
name = "fakeroute"
version = "1.0.0"
edition = "2024"
authors = ["NameOfShadow", "NameOfShadow <0nameofshadow0@gmail.com>"]
description = "A simple CLI tool to mock JSON API endpoints from a directory structure."
license = "MIT"
repository = "https://github.com/NameOfShadow/fakeroute"
readme = "README.md"
keywords = ["mock", "api", "json", "cli", "faker", "development", "tool", "utility"]
categories = ["development-tools"]

[dependencies]
axum = { version = "0.8.9", default-features = false, features = ["http1", "json", "tokio"] }
tokio = { version = "1.51.1", features = ["rt", "macros", "signal", "fs", "net", "sync"] }
pico-args = "0.5.0"
serde_json = "1.0.149"
owo-colors = "4.3.0"
chrono = { version = "0.4.44", default-features = false, features = ["clock"] }
notify = "8.2.0"

[profile.release]
strip = true
lto = true
codegen-units = 1
